create profile method
